# bee-api

./: .env.example  Cargo.toml  docker-compose.yml
migrations/: 20230418222958_create_users_table.sql  20230504221126_create_tags_table.sql  20230515214833_create_spends_table.sql  20230515214854_create_spend_tags_table.sql
src/: errors.rs  main.rs
src/controller/: auth_controller.rs  mod.rs
src/database/: mysql.rs
src/dto/: auth_dto.rs  mod.rs  spend_dto.rs  tag_dto.rs
src/extractors/: mod.rs  user_extrator.rs
src/handlers/: auth_handler.rs  mod.rs  spend_handler.rs  tag_handler.rs
src/model/: auth.rs  mod.rs  spend.rs  tag.rs  user.rs
src/repository/: mod.rs  spend_repository.rs  tag_repository.rs  user.rs  user_repository.rs
src/routes/: auth.rs  mod.rs  spend.rs  tag.rs  user.rs
src/services/: auth_service.rs  mod.rs  spend_service.rs  tag_services.rs
src/utils/: encryption.rs  jwt.rs
