[package]
name = "bee-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
async-trait = "0.1.60"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8"
chrono = {version = "0.4.24", features = ["serde"]}
serde_json = "1.0.96"
