[package]
name = "bee-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "mysql", "chrono", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
async-trait = "0.1.60"
reqwest = { version = "0.11", features = ["json"] }
jsonwebtoken = "8"
chrono = {version = "0.4.24", features = ["serde"]}
serde_json = "1.0.96"
tower = "0.4.13"
futures-util = "0.3.28"
tower-http = { version = "0.2", features = ["full"] }
validator = { version = "0.14", features = ["derive"] }
uuid = "1.3.2"
axum-macros = "0.3.7"
bcrypt = "0.14.0"
rayon = "1.7.0"
thiserror = "1.0.40"
bigdecimal = {version = "0.3.1", features = ["serde"]}
